fix image scaling to make it less blurr

--- a/index.css
+++ b/index.css
@@ -4,6 +4,11 @@
     box-sizing: border-box
 }
 
+img {
+    image-rendering: pixelated;
+}
+
+
 body {
     background: black;
 }
